syntax = "proto3";
package profilepb;
option go_package = "api/pb";

import "profile_request.proto";
import "profile_response.proto";


service ProfileService {
    // Create a new profile.
    rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);

    // Get a profile by its ID.
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

    // Delete a profile by its ID.
    rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);


    // Set a profile's avatar.
    rpc AddProfileAvatar(AddProfileAvatarRequest) returns (AddProfileAvatarResponse);

    // Delete a profile's avatar by ID.
    rpc DeleteProfileAvatar(DeleteProfileAvatarRequest) returns (DeleteProfileAvatarResponse);
}

